# osc

./: .gitignore  CMakeLists.txt  main.cpp  osc.code-workspace  receive.cpp  send.cpp  transport.cpp
include/: receive.h  send.h  transport.h
include/oscpp/detail/: stream.hpp
